# homepi

./: Justfile  README.md  connect.sh  install.sh  start.sh  stop.sh
apps/adminer/: docker-compose.yml
apps/api-gateway/: .gitignore  deploy.sh  status.sh
apps/api-gateway/football-fan-api/: deploy.sh  fetch.sh  start.sh  stop.sh
apps/cockpit/: README.md  install.sh  start.sh  stop.sh
apps/glance/: docker-compose.yml
apps/health/: Dockerfile  docker-compose.yml  log_conf.yaml  pyproject.toml
apps/health/src/: api.py  main.py
apps/health/src/checks/: postgres.py
apps/health/src/config/: env.py
apps/health/src/config/logging/: logger.py
apps/health/src/config/logging/formatter/: custom_json_formatter.py
apps/health/src/controllers/: health_check_controller.py
apps/health_check/: docker-compose.yml  pyproject.toml  run.sh
apps/kafka/: README.md  docker-compose.yml  kafka.env
apps/kong/: docker-compose.yml
apps/nginx/: apply.sh  deploy.sh  ystemctl status nginx.serviceq
apps/nginx-proxy-manager/: docker-compose.yml
apps/pgadmin/: docker-compose.yml
apps/pihole/: README.md  docker-compose.yml  install.sh
apps/portainer/: docker-compose.yml
apps/postgres/: docker-compose.yml
apps/redis/: docker-compose.yml
apps/registry/: README.md  docker-compose.yml
apps/tyk/: .gitignore  docker-compose.yml  install.sh  start.sh  stop.sh
dashboards/glance/: docker-compose.yml
dashboards/portainer/: docker-compose.yml  start.sh
nginx/: apply-changes.sh  docker-compose.yml  install.sh  status.sh  stop.sh
nginx/config/: nginx.conf
(+32 files in other folders)
